Add second controller